--- a/DeviceFrontend/Components/Pages/Home.razor
+++ b/DeviceFrontend/Components/Pages/Home.razor
@@ -55,7 +55,7 @@ else
                             </button>
                         </td>
                         <td>
-                            <button class="btn btn-danger" @onclick="() => DeleteDevice(device.Id)">🗑</button>
+                            <button class="btn btn-danger" @onclick="() => DeleteDevice(device.Id)">X</button>
                         </td>
                     </tr>
                 }
